@@ -708,7 +708,7 @@ about.text=jEdit is brought to you by:\n\
 	\ \n\
 	Slava Pestov\n\
 	Alwyn Barry\n\
-	Amadeo Farello\n\
+	Amedeo Farello\n\
 	Andre Kaplan\n\
 	Artur Biesiadowski\n\
 	Aziz Sharif\n\
